@@ -5,6 +5,7 @@
 * Fix - Welcome page redirection on every plugin updates.
 * Fix - CSV textarea contents line break issue.
 * Fix - Form Field deletion with delete button.
+* Fix - During Form restore set the status to Publish instead of Draft.
 
 = 1.7.4 - 11-03-2021 =
 * Fix - Hide empty select data field from entry view.
